--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .section-1 .bottom {
   display: flex;
   justify-content: space-between;
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-transform: uppercase;
   margin-top: 0.5rem;
 }
@@ -69,9 +69,10 @@ body {
 }
 
 .section2-bottom p {
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   font-weight: 400;
   letter-spacing: 0.1rem;
+  font-family: monospace;
   /* width: 100%; */
 }
 
@@ -280,7 +281,7 @@ main .vertical-text .bottom .text p {
 }
 
 .work-top-text1 p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 400;
   font-family: monospace;
   width: 70%;
@@ -361,7 +362,7 @@ main .vertical-text .bottom .text p {
 }
 
 .footer-top h2{
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
@@ -372,14 +373,15 @@ main .vertical-text .bottom .text p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 2rem;
 }
 
 .footer-text button{
   /* align-self: center; */
-  width: 50%;
+  width: 60%;
   padding:1rem 3rem;
-  font-size: 1rem;
+  font-size: 0.8rem;
   border-radius: 50px;
 }
 
